--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,36 @@
 </head>
 <body>
   <h1>C Place</h1>
-  <canvas id="board" width="100" height="100"></canvas>
+  <h1>selecione uma cor e coloque seu pixel</h1>
+  <h1>nao fiz banco de dados ainda, entao nao se dediquem mt, as artes vao ser perdidas</h1>
+  <canvas id="board" width="500" height="500"></canvas>
   <br>
 
   <div id="palette">
-    <button class="color-btn selected" style="background: #FF0000" data-color="#FF0000"></button>
-    <button class="color-btn" style="background: #00FF00" data-color="#00FF00"></button>
-    <button class="color-btn" style="background: #0000FF" data-color="#0000FF"></button>
-    <button class="color-btn" style="background: #FFFF00" data-color="#FFFF00"></button>
-    <button class="color-btn" style="background: #FF00FF" data-color="#FF00FF"></button>
-    <button class="color-btn" style="background: #00FFFF" data-color="#00FFFF"></button>
-    <button class="color-btn" style="background: #000000" data-color="#000000"></button>
+    <button class="color-btn selected" style="background: #000000" data-color="#000000"></button>
+    <button class="color-btn" style="background: #474747" data-color="#474747"></button>
+    <button class="color-btn" style="background: #cccccc" data-color="#cccccc"></button>
     <button class="color-btn" style="background: #FFFFFF" data-color="#FFFFFF"></button>
+    <button class="color-btn" style="background: #810202" data-color="#810202"></button>
+    <button class="color-btn" style="background: #FF0000" data-color="#FF0000"></button>
+    <button class="color-btn" style="background: #ff5757" data-color="#f77171"></button>
+    <button class="color-btn" style="background: #ff9100" data-color="#ff9100"></button>
+    <button class="color-btn" style="background: #ffe815" data-color="#ffe815"></button>
+    <button class="color-btn" style="background: #5a3401" data-color="#5a3401"></button>
+    <button class="color-btn" style="background: #f3f38f" data-color="#f3f38f"></button>
+    <button class="color-btn" style="background: #078307" data-color="#078307"></button>
+    <button class="color-btn" style="background: #0ddf0d" data-color="#0ddf0d"></button>
+    <button class="color-btn" style="background: #05055c" data-color="#05055c"></button>
+    <button class="color-btn" style="background: #1742ff" data-color="#1742ff"></button>
+    <button class="color-btn" style="background: #4781ff" data-color="#4768ff"></button>
+    <button class="color-btn" style="background: #e661e6" data-color="#e661e6"></button>
+    <button class="color-btn" style="background: #e013e0" data-color="#e013e0"></button>
+    <button class="color-btn" style="background: #00FFFF" data-color="#00FFFF"></button>
+  
   </div>
 
+<h1></h1>
+<h1></h1>
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
 </body>
